fix(replay-cutter): debug cropper selection

--- a/angular/src/app/views/replay_cutter/dialog/crop/crop.dialog.scss
+++ b/angular/src/app/views/replay_cutter/dialog/crop/crop.dialog.scss
@@ -15,6 +15,7 @@ mat-dialog-content {
 
 image-cropper {
   padding: 0;
+  user-select: none;
 }
 
 ::ng-deep image-cropper {
